# lakehouse-event-pipeline

./: .env.example  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
infrastructure/: README.md  docker-compose.yml
infrastructure/spark/: Dockerfile  spark-defaults.conf
scripts/: bootstrap-iceberg.sh  consume-sample.sh  create-topics.sh  describe-topic.sh  infra-down.sh  infra-up.sh  list-topics.sh  produce.sh  spark-shell.sh  spark-submit.sh
src/lakehouse/: __init__.py
src/lakehouse/batch/: __init__.py
src/lakehouse/common/: __init__.py  config.py  logging.py  schemas.py  spark_schemas.py
src/lakehouse/producer/: __init__.py  __main__.py  generator.py  kafka_producer.py
src/lakehouse/streaming/: __init__.py  bootstrap.py  spark_session.py
tests/: conftest.py
tests/common/: test_config.py  test_logging.py  test_schemas.py
tests/producer/: test_generator.py  test_kafka_producer.py  test_main_cli.py
tests/streaming/: conftest.py  test_bootstrap.py
