[tool.poetry]
name = "lakehouse-event-pipeline"
version = "0.1.0"
description = "End-to-end streaming and batch lakehouse pipeline built on Kafka, Spark, and Iceberg."
authors = ["Vardan Malik <vardanmalik1603@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "lakehouse", from = "src" }]

[tool.poetry.dependencies]
python = "~3.11"
pyspark = "3.5.1"
kafka-python = "2.0.2"
confluent-kafka = "2.5.0"
boto3 = "^1.34"
pyyaml = "^6.0"
structlog = "^24.1"
faker = "^25.0"
pydantic = ">=2.5"
pydantic-settings = "^2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
black = "^24.4"
ruff = "^0.4"
isort = "^5.13"
pre-commit = "^3.7"
testcontainers = "^4.5"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src", "tests"]
known_first_party = ["lakehouse"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "C4"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --cov=lakehouse --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: marks tests that require external services (deselect with '-m \"not integration\"')",
    "slow: marks slow-running tests",
    "spark: marks tests that need a local Spark/Iceberg session (Java + PySpark)",
]

[tool.coverage.run]
branch = true
source = ["lakehouse"]

[tool.coverage.report]
show_missing = true
skip_covered = false
